--- a/wechat/pages/doubleroom/creatOrder/creatOrder.wxss
+++ b/wechat/pages/doubleroom/creatOrder/creatOrder.wxss
@@ -31,7 +31,7 @@
    white-space:nowrap; */
 }
 .person-box-word{
-   width:400rpx;
+   width:300rpx;
    overflow:hidden;
    text-overflow:ellipsis;
    white-space:nowrap;
@@ -47,13 +47,17 @@
 }  
 .phone_select{
   width:100%;
-  height:600rpx;
+ 
   position:fixed;
   z-index: 100;
-  overflow-y:scroll;
+  
   left:0rpx;
   /* top:70rpx; */
   bottom:0rpx;
+}
+.phone-wrap{
+   height:600rpx;
+   overflow-y:scroll;
 }
 .select_one{
     text-align: center;
@@ -68,6 +72,9 @@
     text-overflow:ellipsis;
     white-space:nowrap;
 }
+.input-box{
+  position: relative;
+}
 .img-wrap{
   float:right;
   /* border:1rpx solid red;   */
@@ -75,6 +82,8 @@
   /* padding:40rpx 0rpx 10rpx 50rpx; */
   /* display: inline-block; */
   width:120rpx;
+  position:absolute;
+  right:0rpx;
 }
 .graph{
   width:14px;
