--- a/wechat/pages/doubleroom/creatOrder/creatOrder.wxml
+++ b/wechat/pages/doubleroom/creatOrder/creatOrder.wxml
@@ -2,17 +2,19 @@
 <view class='input-wrap'>
   <view class='input-box'>
        <text class="input-word">报案人手机号</text>
-       <input class="input-theme" type='text' bindblur="phoneChang" placeholder='请输入报案人手机号'/>
+        <text class="default-price y-name" wx:if="{{phoneNumber}}">{{phoneNumber}}</text>
+        <input wx:if="{{!phoneNumber}}" class="input-theme" type='text' bindblur="phoneChang" placeholder='请输入报案人手机号'/> 
        <view class="both"></view>
   </view>
   <view class='input-box' bindtap='selectChang'>
        <text class="input-word">保险公司</text>
-        <view class="img-wrap" >
+        <view class="img-wrap" wx:if="{{!insuranceCompany}}">
           <image class='graph'  wx:if="{{selectState}}"  src='../../Resources/upward.png'></image>
           <image class='graph'  wx:if="{{!selectState}}" src='../../Resources/downward.png'></image>
        </view> 
        <view class="input-theme person-box">
-          <view class="default-price" wx:if="{{!selectValue}}"> 请选择保险公司 </view>
+          <view class="person-box-word" wx:if="{{insuranceCompany}}"> {{insuranceCompany}} </view>
+          <view class="default-price" wx:if="{{!selectValue && !insuranceCompany}}"> 请选择保险公司 </view>
           <view class="person-box-word"> {{selectValue}} </view>
           <!-- <view class="phone_select" hidden="{{!selectState}}" bindtap="selectClick">
             <view wx:for="{{insuranceCompanys}}" class="select_one" bindtap="mySelect" data-code="{{item.code}}" data-me="{{item.fullName}}">{{item.fullName}}
@@ -24,8 +26,9 @@
  <view class="select_wrap" hidden="{{!selectState}}"> 
  </view> 
    <view class="phone_select"  hidden="{{!selectState}}">
-            <view class="cancel_but" bindtap="cancelClick">取消</view>
+      <view class="cancel_but" bindtap="cancelClick">取消</view>
       <view class="phone-wrap">
+          <view wx:if="{{insuranceCompanys.length == 0}}" class="tan_loading">加载中……</view>
           <view wx:for="{{insuranceCompanys}}" class="select_one" bindtap="mySelect" bindtap="selectClick" data-code="{{item.code}}" data-me="{{item.fullName}}">{{item.fullName}}
             </view>
       </view>
