--- a/wechat/pages/doubleroom/severIntroduce/severIntroduce.wxml
+++ b/wechat/pages/doubleroom/severIntroduce/severIntroduce.wxml
@@ -8,6 +8,6 @@
   </view>
   <view class='warmText'>
     <text>
-    好e赔车险理赔平台致力打造车险自助理赔第一入口，在您发生交通事故后，请先拨打保险公司报案电话进行报案，然后按提示使用好e赔进行在线理赔。          </text>
+    你我保车险理赔平台致力打造车险自助理赔第一入口，在您发生交通事故后，请先拨打保险公司报案电话进行报案，然后按提示使用你我保进行在线理赔。          </text>
   </view>
 </view>
