--- a/wechat/pages/doubleroom/creatOrder/creatOrder.wxss
+++ b/wechat/pages/doubleroom/creatOrder/creatOrder.wxss
@@ -115,3 +115,15 @@
   padding-left:20rpx;
   color:red;
 }
+.tu-biao{
+  width:30rpx;
+  height:30rpx;
+  border:1rpx solid #fff;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 30rpx;
+  position: absolute;
+  color:red;
+  right:0rpx;
+  top:58rpx;
+}
