--- a/wechat/pages/doubleroom/severIntroduce/severIntroduce.wxml
+++ b/wechat/pages/doubleroom/severIntroduce/severIntroduce.wxml
@@ -4,10 +4,10 @@
       <image class='mainLogo' mode="widthFix" src='../../Resources/severlogo.png'></image>
    </view>
   <view class='videoBox'>
-    <video src='../../Resources/WeChat_20180301131800.mp4'></video>
+    <video src=''></video>
   </view>
   <view class='warmText'>
     <text>
-    你我保车险理赔平台致力打造车险自助理赔第一入口，在您发生交通事故后，请先拨打保险公司报案电话进行报案，然后按提示使用你我保进行在线理赔。          </text>
+    "你我保"车险理赔平台致力打造车险自助理赔第一入口，在您发生交通事故后，打开"你我保"微信小程序，按提示使用"你我保"进行在线理赔。          </text>
   </view>
 </view>
