key:服务人数，rtc，双向

--- a/wechat/pages/cameraview/cameraview.wxml
+++ b/wechat/pages/cameraview/cameraview.wxml
@@ -6,7 +6,7 @@
     <live-pusher
       id="rtcpusher"
       autopush='true'
-      mode="SD"
+      mode="RTC"
       orientation="horizontal"
       url="{{pushURL}}"
       aspect="{{config.aspect}}"
